@@ -1620,9 +1620,10 @@ get_disk_io_counters(PyObject* self, PyObject* args)
             // Read/Write time on OS X comes back in nanoseconds and in psutil
             // we've standardized on milliseconds so do the conversion.
             py_disk_info = Py_BuildValue("(KKKKKK)",
-                                         reads, writes,
-                                         read_bytes, write_bytes,
-                                         read_time / 1000, write_time / 1000);
+                reads, writes,
+                read_bytes, write_bytes,
+                read_time / 1000 / 1000, write_time / 1000 / 1000
+            );
             if (!py_disk_info)
                 goto error;
             if (PyDict_SetItemString(py_retdict, disk_name, py_disk_info))
